# mozkey

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md
.github/ISSUE_TEMPLATE/: bug_report.yml  build_error.yml  config.yml  conversion_issue.yml
.github/workflows/: android.yaml  aur.yaml  lint.yaml  linux.yaml  macos.yaml  release-preflight.yaml  release.yaml  secure-offline.yaml  windows.yaml
LICENSES/: Fcitx5-Mozc-BSD-3-Clause.txt
docs/: build_mozc_for_android.md  build_mozc_for_linux.md  build_mozc_in_docker.md  build_mozc_in_osx.md  build_mozc_in_windows.md  configurations.md  grimodex_desktop_integration.md  linux_daily_dictionary_quality_gate.md  linux_mozkey_migration_quality_evidence_20260717.md  linux_product_isolation.md  mozkey_ibg_product_identity.md  releasing.md  rename-to-mozkey-v0.7.0.md  typing_correction.md
docs/design_doc/: grimodex_linux_native_integration.md
docs/security/: offline_guarantee.md  release_checklist.md
packaging/aur/: .SRCINFO  LICENSE  PKGBUILD  README.md
scripts/: README.md  build_fcitx5_bazel  build_fcitx_bazel  build_mozkey_linux_bazel  fcitx5_install_paths  install_fcitx5  install_fcitx5_bazel  install_fcitx5_data  install_fcitx5_icons  install_mozkey_linux_bazel  install_mozkey_linux_bazel_test.py  install_server  install_server_bazel  install_zenz_runtime  install_zenz_runtime_test.py  launch_fcitx5_mozkey_e2e  mozkey_fcitx5_install_manifest.txt  package_mozkey_linux_bazel  package_mozkey_linux_bazel_test.py  package_mozkey_linux_deb  package_mozkey_linux_rpm  preflight_mozkey_linux_bazel  preflight_mozkey_linux_bazel_test.py  probe_zenz_runtime_bazel  smoke_test_mozkey_fcitx5_install  stage_mozkey_linux_native_package  stop_mozkey_linux_runtime  uninstall_mozkey_fcitx5  update_fcitx5_metainfo  verify_llama_server_compatibility  verify_llama_server_compatibility_test.py  verify_mozkey_linux_build_attestation  verify_zenz_gguf_normalization
src/: BUILD.bazel  MODULE.bazel  README.md  build_defs.bzl  config.bzl  version.bzl
src/base/: BUILD.bazel  android_util.cc  const.h  system_util.cc  system_util.h  system_util_test.cc  version.cc  version.h  version_def_template.h  version_test.cc
src/data/dictionary_koyasi/: BUILD.bazel  README.md  koyasi-syntax-guard.txt
src/data/dictionary_koyasi/evaluation/: positive_daily.tsv  watch_daily.tsv
src/data/dictionary_koyasi/evaluation/general_vocab/: README.md
src/grimodex/: BUILD.bazel  client_context.cc  client_context.h  client_context_test.cc  consumer_file_registrar.h  consumer_file_registrar_posix.cc  consumer_file_registrar_posix.h  consumer_file_registrar_posix_test.cc  consumer_file_registrar_windows.cc  consumer_file_registrar_windows.h  consumer_file_registrar_windows_test.cc  consumer_handshake.cc  consumer_handshake.h  consumer_handshake_test.cc  consumer_heartbeat.cc  consumer_heartbeat.h  consumer_heartbeat_test.cc  consumer_runtime_capability.cc  consumer_runtime_capability.h  consumer_runtime_capability_test.cc  desktop_consumer_heartbeat.cc  desktop_consumer_heartbeat.h  project_dictionary_bridge.cc  project_dictionary_bridge.h  project_dictionary_bridge_test.cc  project_dictionary_provider.cc  project_dictionary_provider.h  project_dictionary_provider_factory.cc  project_dictionary_provider_factory.h  project_dictionary_provider_test.cc  protocol_v1.cc  protocol_v1.h  protocol_v1.proto  protocol_v1_secure_reader.cc  protocol_v1_secure_reader.h  protocol_v1_secure_reader_test.cc  protocol_v1_test.cc  protocol_v1_windows_secure_reader.cc  protocol_v1_windows_secure_reader.h  protocol_v1_windows_secure_reader_test.cc
src/grimodex/testdata/protocol_v1/invalid/: project-unknown-category.json  project-unsupported-version.json  state-unsupported-version.json
src/grimodex/testdata/protocol_v1/malicious/: project-control-character.json  project-path-traversal.json  state-path-traversal.json
src/grimodex/testdata/protocol_v1/valid/: project-with-zenzai-context.json  state-active.json  state-inactive.json
src/mac/zenz_runtime/: BUILD.bazel  README.md
src/typing_correction/: BUILD.bazel  benchmark_typing_correction.cc  composer_replayer.cc  composer_replayer.h  composer_replayer_test.cc  evaluation_metrics.cc  generated_contract.h  generated_holdout_cases.h  generated_kana_rules.h  generated_roman_rules.h  incremental_cache.cc  incremental_cache.h  incremental_cache_test.cc  inspect_typing_correction.cc  kana_typing_corrector.cc  kana_typing_corrector.h  kana_typing_corrector_test.cc  roman_typing_corrector.cc  roman_typing_corrector.h  roman_typing_corrector_test.cc  shadow_conversion.cc  shadow_conversion.h  typing_correction.cc  typing_correction.h  typing_correction_test.cc
src/unix/fcitx5/: BUILD.bazel  Messages.sh  fcitx5_mozkey_ibg_abi_test.py  fcitx_key_event_handler.cc  grimodex_consumer_registrar.cc  grimodex_consumer_registrar.h  grimodex_consumer_registrar_test.cc  grimodex_consumer_tool.cc  grimodex_context.cc  grimodex_context.h  grimodex_context_test.cc  i18nwrapper.h  io.github.kazormia296.MozkeyIbG.metainfo.xml.in  mozc_client_interface.h  mozc_client_pool.cc  mozc_client_pool.h  mozc_client_pool_test.cc  mozc_direct_client.cc  mozc_direct_client.h  mozc_engine.cc  mozc_engine.h  mozc_engine_factory.cc  mozc_ipc_client.cc  mozc_ipc_client.h  mozc_response_parser.cc  mozc_response_parser.h  mozc_state.cc  mozc_state.h  mozc_state_test.cc  mozkey-addon.conf  mozkey-ibg-addon.conf  mozkey-ibg.conf  mozkey.conf  org.fcitx.Fcitx5.Addon.Mozc.metainfo.xml.in  org.fcitx.Fcitx5.Addon.Mozkey.metainfo.xml.in  raw_reading_recovery.cc  raw_reading_recovery.h  raw_reading_recovery_test.cc
src/unix/fcitx5/po/: ka.po  tr.po
src/win32/installer/: BUILD.bazel  build_installer.py  installer_oss_64bit.wxs
src/win32/installer/zenz_runtime/: BUILD.bazel
src/win32/installer/zenz_runtime/licenses/: THIRD_PARTY_NOTICES.md  llama.cpp-MIT.txt  zenz-v3.2-small-gguf.txt
src/zenz_scorer/: BUILD.bazel  json_parser.cc  json_parser.h  json_parser_test.cc  main.cc
tools/: check_no_network_checks_test.py  check_no_network_imports.py  check_no_network_strings.py
(+434 files in other folders)
