load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("//:build_defs.bzl", "MOZC_TAGS", "mozc_cc_library", "mozc_cc_test")

package(default_visibility = ["//:__subpackages__"])

proto_library(
    name = "protocol_v1_proto",
    srcs = ["protocol_v1.proto"],
    deps = ["@com_google_protobuf//:struct_proto"],
)

cc_proto_library(
    name = "protocol_v1_cc_proto",
    deps = [":protocol_v1_proto"],
)

mozc_cc_library(
    name = "client_context",
    srcs = ["client_context.cc"],
    hdrs = ["client_context.h"],
    deps = ["//protocol:commands_cc_proto"],
)

mozc_cc_library(
    name = "protocol_v1",
    srcs = ["protocol_v1.cc"],
    hdrs = ["protocol_v1.h"],
    deps = [
        ":protocol_v1_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_protobuf//:json_util",
        "@com_google_protobuf//:protobuf",
    ],
)

mozc_cc_library(
    name = "protocol_v1_secure_reader",
    srcs = ["protocol_v1_secure_reader.cc"],
    hdrs = ["protocol_v1_secure_reader.h"],
    tags = [
        "noandroid",
        "nowin",
    ],
    deps = [
        ":protocol_v1",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
    ],
)

mozc_cc_library(
    name = "protocol_v1_windows_secure_reader",
    srcs = ["protocol_v1_windows_secure_reader.cc"],
    hdrs = ["protocol_v1_windows_secure_reader.h"],
    linkopts = select({
        "@platforms//os:windows": ["Advapi32.lib"],
        "//conditions:default": [],
    }),
    tags = MOZC_TAGS.WIN_ONLY,
    target_compatible_with = ["@platforms//os:windows"],
    deps = [
        ":protocol_v1",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
    ],
)

mozc_cc_library(
    name = "project_dictionary_bridge",
    srcs = ["project_dictionary_bridge.cc"],
    hdrs = ["project_dictionary_bridge.h"],
    deps = [
        ":protocol_v1",
        "//dictionary:project_dictionary",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

mozc_cc_library(
    name = "project_dictionary_provider",
    srcs = ["project_dictionary_provider.cc"],
    hdrs = ["project_dictionary_provider.h"],
    deps = [
        ":project_dictionary_bridge",
        ":protocol_v1",
        "//dictionary:project_dictionary",
        "@com_google_absl//absl/strings",
    ],
)

mozc_cc_library(
    name = "project_dictionary_provider_factory",
    srcs = ["project_dictionary_provider_factory.cc"],
    hdrs = ["project_dictionary_provider_factory.h"],
    deps = [
        ":project_dictionary_bridge",
        ":project_dictionary_provider",
        ":protocol_v1",
        "//dictionary:project_dictionary",
    ],
)

mozc_cc_test(
    name = "protocol_v1_test",
    size = "small",
    srcs = ["protocol_v1_test.cc"],
    data = glob(["testdata/protocol_v1/**/*.json"]),
    deps = [
        ":protocol_v1",
        "//base:file_util",
        "//testing:gunit_main",
        "//testing:mozctest",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

mozc_cc_test(
    name = "client_context_test",
    size = "small",
    srcs = ["client_context_test.cc"],
    deps = [
        ":client_context",
        "//protocol:commands_cc_proto",
        "//testing:gunit_main",
    ],
)

mozc_cc_test(
    name = "protocol_v1_secure_reader_test",
    size = "small",
    srcs = ["protocol_v1_secure_reader_test.cc"],
    tags = [
        "noandroid",
        "nowin",
    ],
    deps = [
        ":protocol_v1",
        ":protocol_v1_secure_reader",
        "//base:file_util",
        "//testing:gunit_main",
        "//testing:mozctest",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
    ],
)

mozc_cc_test(
    name = "protocol_v1_windows_secure_reader_test",
    size = "small",
    srcs = ["protocol_v1_windows_secure_reader_test.cc"],
    tags = MOZC_TAGS.WIN_ONLY,
    target_compatible_with = ["@platforms//os:windows"],
    deps = [
        ":protocol_v1",
        ":protocol_v1_windows_secure_reader",
        "//base:file_util",
        "//base/win32:wide_char",
        "//testing:gunit_main",
        "//testing:mozctest",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
    ],
)

mozc_cc_test(
    name = "project_dictionary_bridge_test",
    size = "small",
    srcs = ["project_dictionary_bridge_test.cc"],
    deps = [
        ":project_dictionary_bridge",
        ":protocol_v1",
        "//dictionary:project_dictionary",
        "//testing:gunit_main",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:string_view",
    ],
)

mozc_cc_test(
    name = "project_dictionary_provider_test",
    size = "small",
    srcs = ["project_dictionary_provider_test.cc"],
    deps = [
        ":project_dictionary_bridge",
        ":project_dictionary_provider",
        ":protocol_v1",
        "//dictionary:project_dictionary",
        "//testing:gunit_main",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
    ],
)

test_suite(
    name = "portable_protocol_v1_tests",
    tests = [
        ":client_context_test",
        ":project_dictionary_bridge_test",
        ":project_dictionary_provider_test",
        ":protocol_v1_test",
    ],
)
