load("//:build_defs.bzl", "MOZC_TAGS", "mozc_cc_binary")

package(default_visibility = ["//visibility:private"])

mozc_cc_binary(
    name = "mozc_zenz_scorer",
    srcs = ["main.cc"],
    linkopts = select({
        "@platforms//os:windows": [
            "Advapi32.lib",
            "Bcrypt.lib",
            "Winhttp.lib",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)
