package(default_visibility = ["//visibility:public"])

filegroup(
    name = "mozcdic_ut_sample",
    srcs = ["sample/mozcdic-ut-sample.txt"],
)

filegroup(
    name = "mozcdic_ut_daily_local",
    srcs = [
        "generated/profiled/dic-nico-pixiv-delta.txt",
        "generated/profiled/mozcdic-ut-daily.txt",
    ],
)

filegroup(
    name = "mozcdic_ut_rich_local",
    srcs = ["generated/profiled/mozcdic-ut-rich.txt"],
)

filegroup(
    name = "mozcdic_ut_max_local",
    srcs = ["generated/profiled/mozcdic-ut-max.txt"],
)
